--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,6 @@
       <!-- Materialize CSS dependencies -->
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--JQuery-->
-      <script type="text/javascript" src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.min.css' %}"  media="screen,projection"/>
       <!--Let browser know website is optimized for mobile-->
@@ -36,103 +34,15 @@
             <li class="divider"></li>
             <li><a href="{% url 'edit_basedata' %}">My base data</a></li>
             <li><a href="{% url 'change_password' %}">Change password</a></li>
-            <li class="divider"></li>
-            <li><a href="{% url 'logout' %}" class="amber-text text-darken-1">Logout</a></li>
+            <form method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <li><button type="submit" class="btn amber darken-1 white-text">Logout</button></li>
+            </form>
         </ul>
 
         <nav>
             <div class="nav-wrapper light-blue darken-1">
-                {% block sidenav %}
-                    <a data-target="sidenav" class="sidenav-trigger show-on-large btn waves-effect waves-light amber darken-1"><i class="material-icons">menu</i></a>
-                    <ul id="sidenav" class="sidenav">
-                        <li>
-                            <div class="user-view">
-                                <div class="background black"></div>
-                                {% if user.is_authenticated %}
-                                    {% if user.profile_picture %}
-                                        <!--<img class="circle" src="{{ user.profile_picture.url }}">-->
-                                    {% else %}
-                                        <div class="black">
-                                            <img class="circle" src="{% static '/images/avatar.png' %}">
-                                        </div>
-                                    {% endif %}
-                                    <a><span class="amber-text text-darken-1 name">{{ user }}</span></a>
-                                    <a><span class="white-text email">{{ user.email }}</span></a>
-                                    <a class="btn-floating halfway-fab waves-effect waves-light amber darken-1" href="{% url 'logout' %}"><i class="material-icons">logout</i></a>
-                                {% else %}
-                                    <a><img class="circle" src="{% static '/images/avatar.png' %}"></a>
-                                    <a><span class="amber-text text-darken-1 name">Guest</span></a>
-                                    <a><span class="white-text email"></span></a>
-                                    <a data-target="login-modal" class="btn-floating halfway-fab modal-trigger waves-effect waves-light amber darken-1"><i class="material-icons">login</i></a>
-                                {% endif %}
-                            </div>
-                        </li>
-                        <li>
-                            <ul class="collapsible grey-text text-darken-4">
-                                {% if user.is_authorized %}
-                                    <li>
-                                        <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">settings</i>General Management</div>
-                                        <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
-                                            <ul>
-                                                {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'useraccounts' %}"><i class="material-icons light-blue-text text-darken-1">group</i>Useraccounts</a></li>{% endif %}
-                                                {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'qualifications' %}"><i class="material-icons light-blue-text text-darken-1">label</i>Qualifications</a></li>{% endif %}
-                                                <li><a class="waves-effect waves-light" href="{% url 'departments' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Departments</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'demand' %}"><i class="material-icons light-blue-text text-darken-1">date_range</i>Personnel demand</a></li>
-                                                {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'datamanagement' %}"><i class="material-icons light-blue-text text-darken-1">cloud</i>Data management</a></li>{% endif %}
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">group</i>Employee Management</div>
-                                        <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
-                                            <ul>
-                                                <li><a class="waves-effect waves-light" href="{% url 'employees' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Employees</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'holidays' %}"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">event</i>Shift Management</div>
-                                        <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
-                                            <ul>
-                                                <li><a class="waves-effect waves-light" href="{% url 'shifts' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'work_hours' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Work hours</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'shift_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Shift templates</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'day_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Day templates</a></li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                {% elif user.role == 'E' %}
-                                    <li>
-                                        <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">group</i>Employee Management</div>
-                                        <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
-                                            <ul>
-                                                <li><a class="waves-effect waves-light" href="{% url 'own_availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'own_wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">event</i>Shift Management</div>
-                                        <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
-                                            <ul>
-                                                <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'own_absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'own_holidays' %}"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                {% else %}
-                                    <li><a data-target="login-modal" class="modal-trigger waves-effect waves-light"><i class="material-icons blue-text text-darken-1">info</i>Not logged in</a></li>
-                                {% endif %}
-                            </ul>
-                        </li>
-                    </ul>
-                {% endblock %}
+                <a data-target="sidenav" class="sidenav-trigger show-on-large btn waves-effect waves-light amber darken-1"><i class="material-icons">menu</i></a>
                 <a href="#" class="brand-logo">ShiftManager</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     {% block contextmenu %}
@@ -145,6 +55,100 @@
                 </ul>
             </div>
         </nav>
+
+        {% block sidenav %}
+            <ul id="sidenav" class="sidenav">
+                <li>
+                    <div class="user-view">
+                        <div class="background black"></div>
+                        {% if user.is_authenticated %}
+                            {% if user.profile_picture %}
+                                <img class="circle" src="{{ user.profile_picture.url }}">
+                            {% else %}
+                                <div class="black">
+                                    <img class="circle" src="{% static '/images/avatar.png' %}">
+                                </div>
+                            {% endif %}
+                            <a><span class="amber-text text-darken-1 name">{{ user }}</span></a>
+                            <a><span class="white-text email">{{ user.email }}</span></a>
+                            <form method="post" action="{% url 'logout' %}">
+                                {% csrf_token %}
+                                <button class="btn-floating halfway-fab waves-effect waves-light amber darken-1" href=""><i class="material-icons">logout</i></button>
+                            </form>
+                        {% else %}
+                            <a><img class="circle" src="{% static '/images/avatar.png' %}"></a>
+                            <a><span class="amber-text text-darken-1 name">Guest</span></a>
+                            <a><span class="white-text email"></span></a>
+                            <a data-target="login-modal" class="btn-floating halfway-fab modal-trigger waves-effect waves-light amber darken-1"><i class="material-icons">login</i></a>
+                        {% endif %}
+                    </div>
+                </li>
+                <li>
+                    <ul class="collapsible grey-text text-darken-4">
+                        {% if user.is_authorized %}
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">settings</i>General Management</div>
+                                <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
+                                    <ul>
+                                        {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'useraccounts' %}"><i class="material-icons light-blue-text text-darken-1">group</i>Useraccounts</a></li>{% endif %}
+                                        {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'qualifications' %}"><i class="material-icons light-blue-text text-darken-1">label</i>Qualifications</a></li>{% endif %}
+                                        <li><a class="waves-effect waves-light" href="{% url 'departments' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Departments</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'demand' %}"><i class="material-icons light-blue-text text-darken-1">date_range</i>Personnel demand</a></li>
+                                        {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'datamanagement' %}"><i class="material-icons light-blue-text text-darken-1">cloud</i>Data management</a></li>{% endif %}
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">group</i>Employee Management</div>
+                                <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
+                                    <ul>
+                                        <li><a class="waves-effect waves-light" href="{% url 'employees' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Employees</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'holidays' %}"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">event</i>Shift Management</div>
+                                <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
+                                    <ul>
+                                        <li><a class="waves-effect waves-light" href="{% url 'shifts' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'work_hours' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Work hours</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'shift_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Shift templates</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'day_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Day templates</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                        {% elif user.role == 'E' %}
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">group</i>Employee Management</div>
+                                <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
+                                    <ul>
+                                        <li><a class="waves-effect waves-light" href="{% url 'own_availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'own_wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">event</i>Shift Management</div>
+                                <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
+                                    <ul>
+                                        <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'own_absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
+                                        <li><a class="waves-effect waves-light" href="{% url 'own_holidays' %}"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                        {% else %}
+                            <li><a data-target="login-modal" class="modal-trigger waves-effect waves-light"><i class="material-icons blue-text text-darken-1">info</i>Not logged in</a></li>
+                        {% endif %}
+                    </ul>
+                </li>
+            </ul>
+        {% endblock %}
 
         <div class="container">
             {% if messages %}
