--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,16 +3,16 @@
         {% csrf_token %}
         <div class="modal-content">
             <h5 class="light-blue-text text-darken-1"><b>Login</b></h5>
-            <div class="row">
-                <div class="input-field col s12">
+            <div class="row" style="gap: 1em">
+                <div class="s12 input-field">
                     <i class="material-icons prefix">person</i>
+                    <input type="text" name="username" autofocus maxlength="150" required id="id_username" placeholder=" ">
                     <label for="id_username">Username</label>
-                    <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" required id="id_username" class="grey-text text-lighten-1">
                 </div>
-                <div class="input-field col s12">
+                <div class="s12 input-field">
                     <i class="material-icons prefix">vpn_key</i>
+                    <input type="password" name="password" maxlength="150" required id="id_password" placeholder=" ">
                     <label for="id_password">Password</label>
-                    <input type="password" name="password" autocapitalize="none" autocomplete="current-password" maxlength="150" required id="id_password" class="grey-text text-lighten-1">
                 </div>
             </div>
         </div>
