--- a/templates/users/change_password.html
+++ b/templates/users/change_password.html
@@ -4,23 +4,24 @@
 {% block content %}
     {% if user.is_authenticated %}
         <h3 class="light-blue-text text-darken-1">Edit password</h3>
-        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'base' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
+        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'base' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br><br>
         <div class="card">
             <form method="POST" action="{% url 'change_password' %}">
                 {% csrf_token %}
                 <div class="card-content">
-                    <div class="row">
-                        <div class="input-field col s6">
+                    <div class="card-title light-blue-text text-darken-1"><b>Enter new password</b></div>
+                    <div class="row" style="gap: 1em">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">vpn_key</i>
+                            <input type="password" name="new_password1" autocapitalize="none" maxlength="50" required id="id_password1" class="grey-text text-lighten-1" placeholder=" ">
                             <label for="id_password1">New password</label>
-                            <input type="password" name="new_password1" autocapitalize="none" maxlength="50" required id="id_password1" class="grey-text text-lighten-1">
                         </div>
-                        <div class="input-field col s6">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">vpn_key</i>
+                            <input type="password" name="new_password2" autocapitalize="none" maxlength="50" required id="id_password2" class="grey-text text-lighten-1" placeholder=" ">
                             <label for="id_password2">New password (repeat)</label>
-                            <input type="password" name="new_password2" autocapitalize="none" maxlength="50" required id="id_password2" class="grey-text text-lighten-1">
                         </div>
-                    </div>
+                    </div><br>
                     <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">update</i>Update password</button>
                 </div>
             </form>
