--- a/templates/users/edit_basedata.html
+++ b/templates/users/edit_basedata.html
@@ -4,117 +4,118 @@
 {% block content %}
     {% if user.is_authenticated %}
         <h3 class="light-blue-text text-darken-1">Edit base data</h3>
-        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'base' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
+        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'base' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br><br>
         <form method="POST" action="{% url 'edit_basedata' %}">
             {% csrf_token %}
             <div class="card">
                 <div class="card-content">
-                    <div class="card-title light-blue-text text-darken-1">Base data</div>
-                    <div class="row">
-                        <div class="input-field col s6">
+                    <div class="card-title light-blue-text text-darken-1"><b>Base data</b></div>
+                    <div class="row" style="gap: 1em">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">person</i>
-                            <label for="id_username">Username</label>
-                            <input type="text" name="username" autofocus value="{{ user.username }}" autocapitalize="none" maxlength="15" disabled id="id_username" class="grey-text text-lighten-1">
-                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
+                            <input type="text" name="username" autofocus value="{{ user.username }}" autocapitalize="none" maxlength="15" disabled id="id_username" class="grey-text text-lighten-1" placeholder=" ">
+                            <label for="id_username">*Username</label>
+                            <span class="helper-text grey-text text-lighten-1">can't be changed by yourself</span>
                         </div>
-                        <div class="input-field col s6">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">mail</i>
-                            <label for="id_email">E-Mail</label>
-                            <input type="email" name="email" value="{{ user.email }}" autocapitalize="none" maxlength="150" required id="id_email" class="grey-text text-darken-4">
+                            <input type="email" name="email" value="{{ user.email }}" autocapitalize="none" maxlength="150" required id="id_email" class="grey-text text-darken-4" placeholder=" ">
+                            <label for="id_email">*E-Mail</label>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s6">
+                    </div><br>
+                    <div class="row" style="gap: 1em">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">label</i>
-                            <label for="id_first_name">First name</label>
-                            <input type="text" name="first_name" value="{{ user.first_name }}" autocapitalize="none" maxlength="50" disabled id="id_first_name" class="grey-text text-lighten-1">
-                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
+                            <input type="text" name="first_name" value="{{ user.first_name }}" autocapitalize="none" maxlength="50" disabled id="id_first_name" class="grey-text text-lighten-1" placeholder=" ">
+                            <label for="id_first_name">*First name</label>
+                            <span class="helper-text grey-text text-lighten-1">can't be changed by yourself</span>
                         </div>
-                        <div class="input-field col s6">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">label</i>
-                            <label for="id_last_name">Last name</label>
-                            <input type="text" name="last_name" value="{{ user.last_name }}" autocapitalize="none" maxlength="50" disabled id="id_last_name" class="grey-text text-lighten-1">
-                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
+                            <input type="text" name="last_name" value="{{ user.last_name }}" autocapitalize="none" maxlength="50" disabled id="id_last_name" class="grey-text text-lighten-1" placeholder=" ">
+                            <label for="id_last_name">*Last name</label>
+                            <span class="helper-text grey-text text-lighten-1">can't be changed by yourself</span>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s6">
+                    </div><br>
+                    <div class="row" style="gap: 1em">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">phone</i>
+                            <input type="text" name="telephone_home" value="{{ user.telephone_home }}" autocapitalize="none" maxlength="20" id="id_telephone_home" class="grey-text text-darken-4" placeholder=" ">
                             <label for="id_telephone_home">Telephone home</label>
-                            <input type="text" name="telephone_home" value="{{ user.telephone_home }}" autocapitalize="none" maxlength="20" id="id_telephone_home" class="grey-text text-darken-4">
                         </div>
-                        <div class="input-field col s6">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">stay_current_portrait</i>
+                            <input type="text" name="telephone_mobile" value="{{ user.telephone_mobile }}" autocapitalize="none" maxlength="20" id="id_telephone_mobile" class="grey-text text-darken-4" placeholder=" ">
                             <label for="id_telephone_mobile">Telephone mobile</label>
-                            <input type="text" name="telephone_mobile" value="{{ user.telephone_mobile }}" autocapitalize="none" maxlength="20" id="id_telephone_mobile" class="grey-text text-darken-4">
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s6">
+                    </div><br>
+                    <div class="row" style="gap: 1em">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">house</i>
+                            <input type="text" name="address" value="{{ user.address }}" autocapitalize="none" maxlength="50" id="id_address" class="grey-text text-darken-4" placeholder=" ">
                             <label for="id_address">Address</label>
-                            <input type="text" name="address" value="{{ user.address }}" autocapitalize="none" maxlength="50" id="id_address" class="grey-text text-darken-4">
                         </div>
-                        <div class="input-field col s6">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">apartment</i>
+                            <input type="text" name="zip_city" value="{{ user.zip_city }}" autocapitalize="none" maxlength="50" id="id_zip_city" class="grey-text text-darken-4" placeholder=" ">
                             <label for="id_zip_city">Zip City</label>
-                            <input type="text" name="zip_city" value="{{ user.zip_city }}" autocapitalize="none" maxlength="50" id="id_zip_city" class="grey-text text-darken-4">
                         </div>
-                    </div>
+                    </div><br>
                     <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">update</i>Update data</button>
                 </div>
-            </div>
+            </div><br>
             <div class="card">
                 <div class="card-content">
-                    <div class="card-title light-blue-text text-darken-1">Contract details</div>
-                    <div class="row">
-                        <div class="input-field col s4">
+                    <div class="card-title light-blue-text text-darken-1"><b>Contract details</b></div>
+                    <div class="row" style="gap: 1em">
+                        <div class="s4 input-field">
                             <i class="material-icons prefix">local_offer</i>
-                            <label for="id_start_contract">Role</label>
-                            <input type="text" name="start_contract" value="{% if user.role == 'A' %}Admin{% elif user.role == 'P' %}Planner{% else %}Employee{% endif %}" disabled autocapitalize="none" maxlength="50" id="id_start_contract" class="grey-text text-lighten-1">
-                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
+                            <input type="text" name="start_contract" value="{% if user.role == 'A' %}Admin{% elif user.role == 'P' %}Planner{% else %}Employee{% endif %}" disabled autocapitalize="none" maxlength="50" id="id_start_contract" class="grey-text text-lighten-1" placeholder=" ">
+                            <label for="id_start_contract">*Role</label>
+                            <span class="helper-text grey-text text-lighten-1">can't be changed by yourself</span>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="s2 input-field">
                             <i class="material-icons prefix">tag</i>
-                            <label for="id_staff_id">Staff ID</label>
-                            <input type="text" name="staff_id" value="{{ user.staff_id }}" disabled autocapitalize="none" maxlength="15" required id="id_staff_id" class="grey-text text-lighten-1">
-                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
+                            <input type="text" name="staff_id" value="{{ user.staff_id }}" disabled autocapitalize="none" maxlength="15" required id="id_staff_id" class="grey-text text-lighten-1" placeholder=" ">
+                            <label for="id_staff_id">*Staff ID</label>
+                            <span class="helper-text grey-text text-lighten-1">can't be changed by yourself</span>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="s2 input-field">
                             <label>
                                 <input type="checkbox" {% if user.is_external == True %}checked="checked"{% endif %} disabled name="is_external" />
                                 <span>External</span>
                             </label>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="s2 input-field">
                             <label>
                                 <input type="checkbox" {% if user.is_active == True %}checked="checked"{% endif %} disabled name="is_active" />
                                 <span>Active</span>
                             </label>
                         </div>
-                        <div class="input-field col s2">
+                        <div class="s2 input-field">
                             <label>
                                 <input type="checkbox" {% if user.is_verified == True %}checked="checked"{% endif %} disabled name="is_verified" />
                                 <span>Verified</span>
                             </label>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s6">
+                    </div><br>
+                    <div class="row" style="gap: 1em">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">event_calendar</i>
+                            <input type="text" name="start_contract" value="{{ user.start_contract|date:"Y-m-d" }}" disabled autocapitalize="none" maxlength="50" id="id_start_contract" class="grey-text text-lighten-1" placeholder=" ">
                             <label for="id_start_contract">Start contract</label>
-                            <input type="text" name="start_contract" value="{{ user.start_contract|date:"Y-m-d" }}" disabled autocapitalize="none" maxlength="50" id="id_start_contract" class="grey-text text-lighten-1">
                             <span class="helper-text grey-text text-lighten-1">can't be changed</span>
                         </div>
-                        <div class="input-field col s6">
+                        <div class="s6 input-field">
                             <i class="material-icons prefix">event_calendar</i>
+                            <input type="text" name="end_contract" value="{{ user.end_contract|date:"Y-m-d" }}" disabled autocapitalize="none" maxlength="50" id="id_end_contract" class="grey-text text-lighten-1" placeholder=" ">
                             <label for="id_end_contract">End contract</label>
-                            <input type="text" name="end_contract" value="{{ user.end_contract|date:"Y-m-d" }}" disabled autocapitalize="none" maxlength="50" id="id_end_contract" class="grey-text text-lighten-1">
                             <span class="helper-text grey-text text-lighten-1">can't be changed</span>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
+                    </div><br>
+                    <div class="card-title light-blue-text text-darken-1"><b>Qualifications</b></div>
+                    <div class="row" style="gap: 1em">
+                        <div class="s12 input-field">
                             <i class="material-icons prefix">tag</i>
                             <div class="chips chips-initial">
                                 {% for entry in associated_qualifications %}
